--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 Django==1.10
+oauthlib==1.1.2
+PyJWT==1.4.2
+python-openid==2.2.5
+python-social-auth==0.2.21
+requests==2.11.1
+requests-oauthlib==0.6.2
+six==1.10.0
 wheel==0.26.0
