--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ db.sqlite3
 
 # PyCharm Folders
 .idea
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
