--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -3,7 +3,7 @@ option_settings:
     DJANGO_SETTINGS_MODULE: "dexterhive.settings"
     "PYTHONPATH": "/opt/python/current/app/dexterhive:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: dexterhive/dexterhive/wsgi.py
+    WSGIPath: dexterhive/wsgi.py
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
