--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,6 +1,6 @@
 option_settings:
   "aws:elasticbeanstalk:application:environment":
-    DJANGO_SETTINGS_MODULE: "dexterhive.settings"
+    DJANGO_SETTINGS_MODULE: "dexterhive.prod_settings"
     "PYTHONPATH": "/opt/python/current/app/dexterhive:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: dexterhive/wsgi.py
