--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -2,8 +2,6 @@ container_commands:
   01_migrate:
     command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
     leader_only: true
-  02_collectstatic:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
@@ -14,4 +12,4 @@ option_settings:
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
-    "/static/": "/static/dexterhive"
+    "/static/": "static/dexterhive"
